--- a/lab01/inagawa-bio.html
+++ b/lab01/inagawa-bio.html
@@ -3,8 +3,8 @@
     <head>
     <meta charset="utf-8">
     <title>Yui Inagawa</title>
-    <head>
+    </head>
     <body>
     My name is Yui Inagawa and I am a sophomore at Syracuse University. I am a dual major in Newhouse studying television, radio, and film and the iSchool studying informational technology. I have a passion for video editing and doing a lot of “behind the scenes” work for films that are produced. During my freshman year, I produced a documentary for Syracuse NEWS-house where they published my film and wrote an article about it. Outside of school, my main hobby is tennis. After classes, I work at the Drumlins Tennis Center to teach children how to play tennis. I am on the club tennis team at Syracuse. When I am not at school or working , I enjoy having out with my friends, going to watch the sunset, and go out to my favorite restaurants in my hometown, Greenwich, Connecticut. 
-    <body>
+    </body>
 </html>
